# RestoringTCR

./: .gitignore  README.md  pyproject.toml
data_panspecific/: TestdatasetNeg_epi_inlist.csv  TestdatasetPos_epi_inlist.csv  TraindatasetPos_epi_inlist.csv
figures/: ACC_performance_multiepi_Datasets_control_P103631N103631_genbal_wnegs_batch128.csv  ACC_performance_multiepi_Datasets_control_P92778N92778_bal_wnegs_batch128.csv  AUCACC_performance_YLQPRTFLL_batchsize_128_P_550.csv  AUCACC_performance_YVLDHLIVV_batchsize_512_P_7000.csv  AUC_performance_multiepi_Datasets_control_P103631N103631_genbal_wnegs_batch128.csv  AUC_performance_multiepi_Datasets_control_P92778N92778_bal_wnegs_batch128.csv  Epi_enlarged_400.txt  Figures.ipynb  TCR_plots_embeddings_test.npy
figures/Data/: ACC_performance_multiepi_Datasets_control_P106921N106921_genbal_wnegs_batch128_NEWFOROUT_newloss.csv  ACC_performance_multiepi_Datasets_control_P22000N25000_batch128_genspecific.csv  ACC_performance_multiepi_Datasets_control_P56000N59000_batch128_genspecific.csv  ACC_performance_multiepi_Datasets_control_P9000N12000_batch128_genfull.csv  ACC_performance_multiepi_Datasets_control_P9000N12000_batch128_genspecific.csv  AUCACC_performance_singleclass_batchsize128_min_rand.csv  AUC_performance_multiepi_Datasets_control_P100671N100671_genbal_wnegs_batch128.csv  AUC_performance_multiepi_Datasets_control_P106921N106921_genbal_wnegs_batch128.csv  Embeds_ELAGIGILTV_outsamples.npy  (+19 more)
src/: aligner_hmmer.py  script_generate_plm.py  script_multiepi_generative_outfixedepi.py  script_train_plm.py  utils.py
(+120 files in other folders)
