[project]
name = "RestoringTCR"
version = "0.1.0"
description = ""
authors = [
  {name = "Emanuele Loffredo", email = "loffredo234@gmail.com"},
  {name = "Mauro Pastore", email = "example@example.com"},
]
requires-python = ">=3.11.0, < 3.12"
dependencies = [
	"torch == 2.0.0",
	"transformers == 4.32.1",
	"numpy == 1.24.4",
	"scipy == 1.11.3",
	"scikit-learn == 1.3.2",
	"pandas == 1.3.4",
	"seaborn == 0.11.2",
	"matplotlib == 3.4.2",
	"jupyterlab == 3.2.1",
]

[tool.uv]
dev-dependencies = [
	"ruff >=0.6"
]
